# solana-volume-bot

./: .env.example  .gitignore  database.db  main.spec  pyproject.toml
alembic/: env.py
alembic/versions/: 136969b2dcdb_.py
src/: config.py  database.py  main.py
src/menus/: base_menu.py  main_menu.py  trading_menu.py  wallet_menu.py
src/models/: base.py  token.py  wallet.py
src/service/: transaction_service.py  wallet.json  wallet_service.py
src/utils/: decorators.py  styles.py
