[project]
name = "solana-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Kla1mzZz",email = "kla1mzz16@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "solana_bot", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
